# ufc-predictor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
dashboard/: streamlit_app.py
docs/: BACKTEST_WORKBOOK.md  DATA.md  MODEL_CARD.md  ODDS.md  RESULTS.md  WORKFLOW.md
docs/artifacts/: ufc_backtest_tables_charts.xlsx  ufc_betting_report_example.xlsx  ufc_historical_odds_backtest_example.csv  ufc_historical_odds_backtest_example.xlsx  ufc_historical_odds_strategy_summary_example.csv  ufc_holdout_backtest_rows.csv
src/ufc_predictor/: __init__.py  backtest_workbook.py  betting_workbook.py  calibration.py  cli.py  config.py  elo.py  evaluation.py  features.py  historical_odds.py  io.py  model_compare.py  models.py  odds.py  odds_api.py  ufcstats_source.py
tests/: test_analytics.py  test_cli_flow.py  test_features.py  test_odds.py  test_odds_api.py  test_ufcstats_source.py
tests/fixtures/: events.csv  fight_stats.csv  fighters.csv  fights.csv  odds.csv  odds_board.csv  predictions.csv  upcoming_fights.csv
