[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc-predictor"
version = "0.1.0"
description = "Leakage-safe UFC winner prediction pipeline with calibrated probabilities."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Fink692" },
]
keywords = ["ufc", "mma", "machine-learning", "sports-analytics", "prediction"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
ufc-predict = "ufc_predictor.cli:main"

[project.urls]
Homepage = "https://github.com/Fink692/ufc-predictor"
Issues = "https://github.com/Fink692/ufc-predictor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
